log
Thu, May  1, 2025 11:03:34 PM: 
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
5729e4d
Thu, May  1, 2025 11:04:09 PM: 
 tests:  1|8
total_score: 0/70
b930a7e
Sat, May  3, 2025  5:03:05 PM: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
2347930
